--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "server": "tsx src/server/index.ts",
-    "sitemap": "node scripts/generateSitemap.js"
+    "sitemap": "node scripts/generateSitemap.js",
+    "download-registry": "tsx src/server/downloadRegistry.ts",
+    "load-db": "tsx src/server/loadDatabase.ts",
+    "update-registry": "npm run download-registry && npm run load-db"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -45,6 +48,8 @@
     "@react-google-maps/api": "^2.20.5",
     "@supabase/supabase-js": "^2.47.16",
     "@tanstack/react-query": "^5.56.2",
+    "@types/adm-zip": "^0.5.7",
+    "adm-zip": "^0.5.16",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -54,19 +59,27 @@
     "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.0",
     "express": "^4.18.2",
+    "framer-motion": "^12.0.3",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
+    "remark-gfm": "^4.0.0",
     "sitemap": "^8.0.0",
     "sonner": "^1.5.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
@@ -93,7 +106,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.11",
     "ts-node": "^10.9.2",
-    "tsx": "^4.7.1",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.3",
     "typescript-eslint": "^8.0.1",
     "vite": "^5.4.1"
